force-app/main/default/objects/CustomFieldMapping__c/CustomFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Map custom fields to standard object fields used by PipeLaunch. Example: Your org uses a custom field name to specify an Account Annual Revenue</description>
    <label>PipeLaunch Custom Field Mapping</label>
</CustomObject>