force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Avatar_URL__c</fullName>
    <defaultValue>&quot;avatar_url__c&quot;</defaultValue>
    <label>Account Avatar URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>