force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_City__c</fullName>
    <defaultValue>&quot;BillingCity&quot;</defaultValue>
    <label>Account Billing City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>