force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Country_Code__c</fullName>
    <defaultValue>&quot;BillingCountryCode&quot;</defaultValue>
    <label>Account Billing Country Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>