force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State__c</fullName>
    <defaultValue>&quot;BillingState&quot;</defaultValue>
    <label>Account Billing State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>