force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Street__c</fullName>
    <defaultValue>&quot;BillingStreet&quot;</defaultValue>
    <label>Account Billing Street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>