force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Brand_Name__c</fullName>
    <defaultValue>&quot;BrandName__c&quot;</defaultValue>
    <label>Account Brand Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>