force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <defaultValue>&quot;Description&quot;</defaultValue>
    <label>Account Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>