force-app/main/default/objects/CustomFieldMapping__c/fields/Account_DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>Account_DunsNumber__c</fullName>
    <defaultValue>&quot;DunsNumber__c&quot;</defaultValue>
    <label>Account D-U-N-S Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>