force-app/main/default/objects/CustomFieldMapping__c/fields/Account_HitHorizons_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_HitHorizons_ID__c</fullName>
    <defaultValue>&quot;HitHorizonsID__c&quot;</defaultValue>
    <label>Account HitHorizons ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>