force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <defaultValue>&quot;Industry&quot;</defaultValue>
    <label>Account Industry</label>
    <length>60</length>
    <type>Text</type>
</CustomField>