force-app/main/default/objects/CustomFieldMapping__c/fields/Account_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Account_LinkedIn__c</fullName>
    <defaultValue>&quot;LinkedIn__c&quot;</defaultValue>
    <label>Account LinkedIn</label>
    <length>60</length>
    <type>Text</type>
</CustomField>