force-app/main/default/objects/CustomFieldMapping__c/fields/Account_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Postal_Code__c</fullName>
    <defaultValue>&quot;BillingPostalCode&quot;</defaultValue>
    <label>Account Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>