force-app/main/default/objects/CustomFieldMapping__c/fields/Account_SIC__c.field-meta.xml
<CustomField>
    <fullName>Account_SIC__c</fullName>
    <defaultValue>&quot;Sic&quot;</defaultValue>
    <label>Account SIC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>