force-app/main/default/objects/CustomFieldMapping__c/fields/Account_YearStarted__c.field-meta.xml
<CustomField>
    <fullName>Account_YearStarted__c</fullName>
    <defaultValue>&quot;YearStarted&quot;</defaultValue>
    <label>Account YearStarted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>