force-app/main/default/objects/CustomFieldMapping__c/fields/Company_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Avatar_URL__c</fullName>
    <defaultValue>&quot;Company_Avatar_URL__c&quot;</defaultValue>
    <label>Company Avatar URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>