force-app/main/default/objects/CustomFieldMapping__c/fields/Company_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Company_LinkedIn__c</fullName>
    <defaultValue>&quot;Company_LinkedIn__c&quot;</defaultValue>
    <label>Company LinkedIn</label>
    <length>60</length>
    <type>Text</type>
</CustomField>