force-app/main/default/objects/CustomFieldMapping__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <defaultValue>&quot;Phone&quot;</defaultValue>
    <label>Contact Phone</label>
    <length>60</length>
    <type>Text</type>
</CustomField>