force-app/main/default/objects/CustomFieldMapping__c/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <defaultValue>&quot;Salutation&quot;</defaultValue>
    <label>Contact Salutation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>