force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Annual_Revenue__c</fullName>
    <defaultValue>&quot;AnnualRevenue&quot;</defaultValue>
    <label>Lead Annual Revenue</label>
    <length>60</length>
    <type>Text</type>
</CustomField>