force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>Lead_Avatar_URL__c</fullName>
    <defaultValue>&quot;avatar_url__c&quot;</defaultValue>
    <label>Lead Avatar URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>