force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_Billing_State__c</fullName>
    <defaultValue>&quot;State&quot;</defaultValue>
    <label>Lead Billing State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>