force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Lead_Billing_Street__c</fullName>
    <defaultValue>&quot;Street&quot;</defaultValue>
    <label>Lead Billing Street</label>
    <length>60</length>
    <type>Text</type>
</CustomField>