force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country_Code__c</fullName>
    <defaultValue>&quot;CountryCode&quot;</defaultValue>
    <label>Lead Country Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>