force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>Lead_DunsNumber__c</fullName>
    <defaultValue>&quot;CompanyDunsNumber__c&quot;</defaultValue>
    <label>Lead D-U-N-S Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>