force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Lead_LinkedIn__c</fullName>
    <defaultValue>&quot;LinkedIn__c&quot;</defaultValue>
    <label>Lead LinkedIn</label>
    <length>60</length>
    <type>Text</type>
</CustomField>