force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Number_Of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number_Of_Employees__c</fullName>
    <defaultValue>&quot;NumberOfEmployees&quot;</defaultValue>
    <label>Lead Number Of Employees</label>
    <length>60</length>
    <type>Text</type>
</CustomField>