force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_SIC__c.field-meta.xml
<CustomField>
    <fullName>Lead_SIC__c</fullName>
    <defaultValue>&quot;Sic__c&quot;</defaultValue>
    <label>Lead SIC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>