force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <defaultValue>&quot;Title&quot;</defaultValue>
    <label>Lead Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>