force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Website__c.field-meta.xml
<CustomField>
    <fullName>Lead_Website__c</fullName>
    <defaultValue>&quot;Website&quot;</defaultValue>
    <label>Lead Website</label>
    <length>60</length>
    <type>Text</type>
</CustomField>