force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_Xing__c.field-meta.xml
<CustomField>
    <fullName>Lead_Xing__c</fullName>
    <defaultValue>&quot;Xing__c&quot;</defaultValue>
    <label>Lead Xing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>