force-app/main/default/objects/CustomFieldMapping__c/fields/Lead_YearStarted__c.field-meta.xml
<CustomField>
    <fullName>Lead_YearStarted__c</fullName>
    <defaultValue>&quot;YearStarted__c&quot;</defaultValue>
    <label>Lead YearStarted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>